# imc-prosperity-3

./: .gitignore  LICENSE  README.md  pyproject.toml
prosperity3/algorithms/: empty.py  hybrid.py
prosperity3/analysis/: data.py  round2.ipynb  round5.ipynb
prosperity3/manual/: round1.ipynb  round2.ipynb  round3.ipynb  round4.ipynb
prosperity3/submissions/: round2.py  round3.py  round4.py
